fixes for mobile-devices + safari. margin instead of grid-gap because safari. slide to fieldset is handled by a div instead of body because of mobile devices. appearance none on inputs for shadows, cus mobile

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,7 +9,7 @@ button {
   cursor: pointer;
   &.submit {
     padding: 1rem 1rem;
-    margin-top: 2rem;
+    margin-top: 3rem !important;
     width: 50%;
     align-self: center;
     border-radius: 50px;
