--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -2,8 +2,15 @@
 
 body {
   background-color: $bg_clr;
+}
+
+#viewport_control {
   height: 100vh;
   overflow: hidden;
+  transition: transform 1s cubic-bezier(0.59, -0.33, 0.34, 1.1);
+}
+
+#viewport_slide {
   transition: transform 1s cubic-bezier(0.59, -0.33, 0.34, 1.1);
 }
 
@@ -25,8 +32,16 @@ fieldset {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  grid-gap: 2rem;
+  // grid-gap: 2rem;
   margin: 30px;
+
+  & > *:not(:first-child):not(legend + p):not(.top) {
+    margin-top: 2rem;
+  }
+
+  & .middle > *:not(:first-child) {
+    margin-top: 2rem;
+  }
 
   & ul {
     height: 100%;
@@ -72,7 +87,13 @@ fieldset {
 
 .flex_container {
   display: flex;
-  grid-gap: 40px;
+
+  & > :first-child {
+    margin-right: 1rem;
+  }
+  & > :last-child {
+    margin-left: 1rem;
+  }
 }
 
 .arrow_container {
@@ -163,7 +184,6 @@ figure {
   & .middle {
     display: flex;
     flex-direction: column;
-    grid-gap: 2rem;
   }
 }
 
